tests/NormalTests/paczka2/big_fuzzy/66342358.err
Error in line 12: nKZGxT A966 23,85
Error in line 14: XS3L2 A966 44,1
Error in line 21: nKZGxT A966 10,6
Error in line 29: A346 A346 2,9
Error in line 28: 94ElP9QWbpI A966 44,5
Error in line 11: ibWj9o A346 67,6
Error in line 38: A346 A966 186,2
Error in line 48: kycu A346 12,9
Error in line 51: ibWj9o A346 36,2
Error in line 34: XS3L2 A602 91,1
Error in line 56: ibWj9o A690 48,8
Error in line 67: 94ElP9QWbpI A346 53,9
Error in line 57: XS3L2 A966 9,6
Error in line 76: nKZGxT A602 52,8
Error in line 84: kycu A602 65,9
Error in line 94: 94ElP9QWbpI A690 365,5
Error in line 104: nKZGxT A602 21,4
Error in line 105: nKZGxT A346 5,2
Error in line 107: nKZGxT A966 86,0
Error in line 98: HoC A346 218,4
Error in line 115: HoC A966 36,8
Error in line 121: 94ElP9QWbpI A690 25,0
Error in line 131: XS3L2 A346 26,1
Error in line 134: 94ElP9QWbpI A34v 351,3
Error in line 133: 94ElP9QWbpI A346 77,9
Error in line 138: 94ElP9QWbpI A966 61,2
Error in line 148: XS3L2 A602 87,9
Error in line 149: XS3L2 A346 11,6
Error in line 151: 94ElP9QWbpI A346 87,7
Error in line 156: ibWj9o A602 63,7
Error in line 157: A346 A690 50,7
Error in line 160: A346 A602 59,3
Error in line 169: 94ElP9QWbpI A690 27,0
Error in line 166: A346 A346 6,0
Error in line 177: 94ElP9QWbpI A690 85,6
Error in line 181: 94ElP9QWbpI A346 27,4
Error in line 183: ibWj9o A966 99,0
Error in line 161: kycu A966 31,5
Error in line 191: nKZGxT A690 -3,7
Error in line 187: kycu A602 41,6
Error in line 197: XS3L2 A346 14,6
Error in line 195: kycu A966 59,3
Error in line 190: nKZGxT A690 76,3
Error in line 209: HoC A602 '1,9
Error in line 210: XS3L2 A690 120,7
Error in line 223: kycu A966 35,6
Error in line 232: kycu A966 95,3
Error in line 233: kycu A346 74,0
Error in line 238: nKZGxT A346 18,8
